- added support of packages in @ExtensionInterface